--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Professional To-Do App</title>
+  <title>To-Do App</title>
   <link rel="stylesheet" href="index.css" >
 </head>
 <body>
   <div class="app">
     <button id="toggle-mode">🌙 Dark Mode</button>
-    <h1>📝 Professional To‑Do List</h1>
+    <h1>To‑Do List</h1>
     <div class="input-area">
       <input type="text" id="task-input" placeholder="Add a new task..." />
       <input type="date" id="due-date" placeholder="Due date" />
